--- a/HWCollectionView/Base.lproj/Main.storyboard
+++ b/HWCollectionView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zs6-EI-bvN">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="dn8-SU-GGH">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Title-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="CollectionViewController" id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -139,7 +139,6 @@
                             <constraint firstItem="7bW-cU-AoO" firstAttribute="leading" secondItem="uHl-8X-i6a" secondAttribute="trailing" id="NJP-Ce-Pu8"/>
                             <constraint firstItem="zTA-Yf-Mxw" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="17" id="Oyu-rU-o3F"/>
                             <constraint firstItem="7bW-cU-AoO" firstAttribute="leading" secondItem="zTA-Yf-Mxw" secondAttribute="leading" id="PKS-SV-XV5"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="l4B-8k-nBY" secondAttribute="bottom" id="Pf6-RV-GYx"/>
                             <constraint firstItem="rQu-6j-X13" firstAttribute="trailing" secondItem="Sli-wn-Ba7" secondAttribute="trailing" id="PuJ-5T-2Xs"/>
                             <constraint firstItem="zTA-Yf-Mxw" firstAttribute="trailing" secondItem="6tD-Sf-lvm" secondAttribute="trailing" id="R4a-Wa-OmA"/>
                             <constraint firstItem="f5X-Zc-wq6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="17" id="REZ-pw-FoE"/>
@@ -171,34 +170,131 @@
                             <constraint firstAttribute="trailing" secondItem="zTA-Yf-Mxw" secondAttribute="trailing" constant="16" id="w2m-lJ-UHE"/>
                             <constraint firstItem="h5U-6Z-tqj" firstAttribute="top" secondItem="6tD-Sf-lvm" secondAttribute="bottom" constant="19" id="wYh-gw-Zle"/>
                             <constraint firstAttribute="trailing" secondItem="EnT-kY-gkg" secondAttribute="trailing" constant="16" id="x5c-BT-rZe"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="l4B-8k-nBY" secondAttribute="bottom" id="zmV-pS-vpj"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="wYU-JD-M7W"/>
+                    <navigationItem key="navigationItem" title="Title" id="fba-na-EfD">
+                        <barButtonItem key="leftBarButtonItem" title="watch again" id="rxk-Te-eVD">
+                            <connections>
+                                <action selector="watchAgainButtonPressed:" destination="BYZ-38-t0r" id="V9v-eN-wcl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="collectionView" destination="l4B-8k-nBY" id="yvq-FB-G29"/>
+                        <outlet property="watchAgainButton" destination="rxk-Te-eVD" id="j31-6h-wMN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
+            <point key="canvasLocation" x="1996" y="122.78860569715144"/>
+        </scene>
+        <!--Help View Controller-->
+        <scene sceneID="S1V-v7-eXF">
+            <objects>
+                <viewController storyboardIdentifier="HelpViewController" id="dn8-SU-GGH" customClass="HelpViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Yiu-lw-T0R"/>
+                        <viewControllerLayoutGuide type="bottom" id="CKv-1t-JGP"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0dO-Vk-mZ2">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6pC-ie-HDX">
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="6pC-ie-HDX" secondAttribute="height" multiplier="125:14" id="Cgv-El-aHH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <state key="normal" title="Skip">
+                                    <color key="titleColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="skipButtonPressed:" destination="dn8-SU-GGH" eventType="touchUpInside" id="ipe-d1-jAA"/>
+                                    <segue destination="sBW-kM-Qzx" kind="show" id="RiA-Rf-KU3"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="6pC-ie-HDX" secondAttribute="trailing" id="DQ5-mo-r6x"/>
+                            <constraint firstItem="6pC-ie-HDX" firstAttribute="leading" secondItem="0dO-Vk-mZ2" secondAttribute="leading" id="ONH-DU-0Zt"/>
+                            <constraint firstItem="CKv-1t-JGP" firstAttribute="top" secondItem="6pC-ie-HDX" secondAttribute="bottom" id="vSQ-fz-ylu"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="skipButton" destination="6pC-ie-HDX" id="TMh-FW-Yuc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="57g-aO-rpa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="220" y="838.83058470764627"/>
+        </scene>
+        <!--Page View Controller-->
+        <scene sceneID="XEc-lH-Cuj">
+            <objects>
+                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="47J-Pv-gaD" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="nfm-bu-M4f"/>
+                </pageViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OcM-bu-edZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1057" y="831"/>
+        </scene>
+        <!--Page Content View Controller-->
+        <scene sceneID="UJX-Iu-rnV">
+            <objects>
+                <viewController storyboardIdentifier="PageContentViewController" id="035-5O-4Lh" customClass="PageContentViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="VFo-TE-Z6x"/>
+                        <viewControllerLayoutGuide type="bottom" id="5JD-sZ-O4e"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="a6D-eZ-FsS">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4AH-te-jbG"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gJm-Iq-g2z">
+                                <frame key="frameInset" minX="65" minY="47" width="244" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="5JD-sZ-O4e" firstAttribute="top" secondItem="4AH-te-jbG" secondAttribute="bottom" id="Hfp-TZ-MbL"/>
+                            <constraint firstItem="4AH-te-jbG" firstAttribute="leading" secondItem="a6D-eZ-FsS" secondAttribute="leading" id="i0R-va-WlW"/>
+                            <constraint firstItem="4AH-te-jbG" firstAttribute="top" secondItem="VFo-TE-Z6x" secondAttribute="bottom" id="oih-zF-96q"/>
+                            <constraint firstAttribute="trailing" secondItem="4AH-te-jbG" secondAttribute="trailing" id="pZy-K4-RXw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="backgroundImageView" destination="4AH-te-jbG" id="u0p-Yl-tIH"/>
+                        <outlet property="titleLabel" destination="gJm-Iq-g2z" id="pvV-YN-Rs4"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Pe3-Iq-xZT" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1823.2" y="830.73463268365822"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="ttO-wK-hDf">
+        <scene sceneID="1Bj-dO-pbn">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zs6-EI-bvN" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sBW-kM-Qzx" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="3ah-IA-AZv">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QkT-uV-xTS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Wxt-fB-2eX"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="eqc-0a-usM"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="txl-41-mLh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Peg-69-1mL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
+            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
         </scene>
     </scenes>
     <resources>
