--- a/CollectionViewTest/Base.lproj/Main.storyboard
+++ b/CollectionViewTest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="fR1-0o-5Uw">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="T4n-aY-8Sm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -79,7 +79,6 @@
                                 </state>
                                 <connections>
                                     <action selector="skipButton:" destination="fR1-0o-5Uw" eventType="touchUpInside" id="0So-Dx-Myj"/>
-                                    <segue destination="T4n-aY-8Sm" kind="modal" id="ojg-fg-Dfq"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -212,7 +211,7 @@
                                     <constraint firstItem="mOs-3V-LKp" firstAttribute="top" secondItem="f23-9b-SWX" secondAttribute="top" id="zhw-d1-7Ou"/>
                                 </constraints>
                             </view>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="21.3" translatesAutoresizingMaskIntoConstraints="NO" id="4X3-k0-vy1">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Avatar" translatesAutoresizingMaskIntoConstraints="NO" id="4X3-k0-vy1">
                                 <rect key="frame" x="8" y="64" width="108" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="QvG-x9-uik"/>
@@ -274,6 +273,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="21.3" width="398" height="399"/>
+        <image name="Avatar" width="400" height="400"/>
     </resources>
 </document>
