--- a/CollectionViewTest/MyCollectionViewCell.xib
+++ b/CollectionViewTest/MyCollectionViewCell.xib
@@ -19,21 +19,31 @@
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U6c-aN-mhi">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="181.5"/>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qF4-JM-58v">
+                        <rect key="frame" x="0.0" y="183.5" width="200" height="14.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                        <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="highlightedColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+                    </label>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="U6c-aN-mhi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="50N-Lh-IFZ"/>
-                <constraint firstAttribute="trailing" secondItem="U6c-aN-mhi" secondAttribute="trailing" id="gk0-V5-z6m"/>
-                <constraint firstAttribute="bottom" secondItem="U6c-aN-mhi" secondAttribute="bottom" id="sUq-zq-RoR"/>
-                <constraint firstItem="U6c-aN-mhi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="xLV-ht-fjl"/>
+                <constraint firstAttribute="trailing" secondItem="qF4-JM-58v" secondAttribute="trailing" id="Wdk-iY-Iit"/>
+                <constraint firstAttribute="bottom" secondItem="qF4-JM-58v" secondAttribute="bottom" constant="2" id="aMz-Mt-P3b"/>
+                <constraint firstItem="qF4-JM-58v" firstAttribute="top" secondItem="U6c-aN-mhi" secondAttribute="bottom" constant="2" id="bW9-6Y-1lT"/>
+                <constraint firstItem="U6c-aN-mhi" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="cbR-dh-UXi"/>
+                <constraint firstItem="qF4-JM-58v" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="d5u-V8-I1o"/>
+                <constraint firstAttribute="trailing" secondItem="U6c-aN-mhi" secondAttribute="trailing" id="ePO-8V-IWZ"/>
+                <constraint firstItem="U6c-aN-mhi" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="ojD-Kf-SSl"/>
             </constraints>
             <size key="customSize" width="151" height="139"/>
             <connections>
+                <outlet property="cellLabel" destination="qF4-JM-58v" id="2O9-mq-Xkm"/>
                 <outlet property="collectionView" destination="U6c-aN-mhi" id="Rdd-ku-EMb"/>
             </connections>
-            <point key="canvasLocation" x="84" y="98.5"/>
+            <point key="canvasLocation" x="84" y="98"/>
         </collectionViewCell>
     </objects>
 </document>
